[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/scripts/button.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/kenney_uiaudio/Audio/switch11.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/textures/kenney_spaceshooter/PNG/playerShip3_red.png" type="Texture" id=4]

[sub_resource type="DynamicFontData" id=1]

resource_name = "Blocks"
font_path = "res://assets/fonts/kenney_fonts/Fonts/Kenney Blocks.ttf"
_sections_unfolded = [ "Resource" ]

[sub_resource type="DynamicFont" id=2]

size = 64
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )
_sections_unfolded = [ "Extra Spacing", "Font", "Resource", "Settings" ]

[sub_resource type="DynamicFontData" id=3]

font_path = "res://assets/fonts/kenney_fonts/Fonts/Kenney Pixel Square.ttf"

[sub_resource type="DynamicFont" id=4]

size = 16
use_mipmaps = false
use_filter = false
font_data = SubResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFontData" id=5]

font_path = "res://assets/fonts/kenney_fonts/Fonts/Kenney Pixel Square.ttf"
_sections_unfolded = [ "Resource" ]

[sub_resource type="DynamicFont" id=6]

size = 16
use_mipmaps = false
use_filter = false
font_data = SubResource( 5 )
_sections_unfolded = [ "Font", "Resource", "Settings" ]

[sub_resource type="Animation" id=7]

length = 1.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="main_menu" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="TextureRect" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1025.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.0859375, 0.0859375, 0.0859375, 1 )

[node name="game_name" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 100.0
margin_right = 1025.0
margin_bottom = 196.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "CC-407"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Rect", "Size Flags", "Visibility", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="game_version" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 185.0
margin_right = 1025.0
margin_bottom = 215.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Version 0.1.0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Visibility", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="quit_game" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 500.0
margin_right = 250.0
margin_bottom = 550.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "QUIT_GAME"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="new_game" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 775.0
margin_top = 500.0
margin_right = 975.0
margin_bottom = 550.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "NEW_GAME"
flat = false
align = 1
script = ExtResource( 2 )
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="hover_sound" type="AudioStreamPlayer" parent="new_game" index="0"]

stream = ExtResource( 3 )
volume_db = 8.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="ship" type="Sprite" parent="." index="5"]

position = Vector2( 512, 350 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="6"]

root_node = NodePath("../ship")
autoplay = "rotation"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/rotation = SubResource( 7 )
blend_times = [  ]

[connection signal="button_up" from="quit_game" to="." method="_on_quit_game_button_up"]

[connection signal="button_up" from="new_game" to="." method="_on_new_game_button_up"]

[connection signal="finished" from="new_game/hover_sound" to="new_game" method="_on_hover_sound_finished"]


